Mon Jun 23 12:49:40 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/generate_export_file.pl:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Make x.2.7 public

        * debian/debian.changelog:
        * debian/debian.control:
        * debian/libnetsvcs-6.2.7.docs:
        * debian/libnetsvcs-6.2.7.install:
        * debian/libnetsvcs-dev.docs:
        * debian/libnetsvcs-dev.install:
          Improved debian packaging

Mon Jun 23 09:43:57 CEST 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.7 released.

Fri Jun  6 06:44:31 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-macosx-yosemite.h:
        * include/makeinclude/platform_macosx_yosemite.GNU:
          Added starter files for MacOSX Yosemite

Thu Jun  5 14:24:58 UTC 2014  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Add XL C++ 12.1 to the
          set of compiler versions using the settings created for V9.

Thu Jun  5 06:37:05 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Configuration.cpp:
        * ace/Connector.cpp:
        * ace/Thread_Manager.cpp:
        * ace/config-win32-msvc-14.h:
          Fixes for msvc14

        * ace/OS_NS_time.inl:
          Disable calling gmtime_s, doesn't work with ctp2014

Wed Jun  4 10:15:04 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc14nmake.mpb:
          vc14 has removed support for /Wp64

Wed Jun  4 10:09:44 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-11.h:
        * ace/config-win32-msvc-12.h:
        * ace/config-win32-msvc-14.h:
        * ace/config-win32-msvc.h:
          Addec config files for msvc10/12/14, they just include the
          config file of the previous msvc version, makes it easier to