@@ -917,7 +917,7 @@ def generate_workspaces (stage_dir):
     mpc_option += ' -relative DANCE_ROOT=' + stage_dir + '/ACE_wrappers/TAO/DAnCE '
     msvc_exclude_option = ' -exclude TAO/CIAO/CIAO_TAO_DAnCE_OpenDDS.mwc,TAO/CIAO/CIAO_TAO_OpenDDS.mwc,TAO/CIAO/CIAO_TAO_DAnCE_OpenDDS_shapes.mwc '
     vc11_option = ' -name_modifier *_vc11 '
-    vc10_option = ' -name_modifier *_vc10 '
+    vc12_option = ' -name_modifier *_vc12 '
 
     redirect_option = str ()
     if not opts.verbose:
@@ -929,8 +929,8 @@ def generate_workspaces (stage_dir):
     print "\tGenerating VC11 solutions..."
     ex (mpc_command + " -type vc11 "  + msvc_exclude_option + mpc_option + workers_option + vc11_option + redirect_option)
 
-    print "\tGenerating VC10 solutions..."
-    ex (mpc_command + " -type vc10 "  + msvc_exclude_option + mpc_option + workers_option + vc10_option + redirect_option)
+    print "\tGenerating VC12 solutions..."
+    ex (mpc_command + " -type vc12 "  + msvc_exclude_option + mpc_option + workers_option + vc12_option + redirect_option)
 
     print "\tCorrecting permissions for all generated files..."
     ex ("find ./ -name '*.vc[p,w]' -or -name '*.bmak' -or -name '*.vcproj' -or -name '*.sln' -or -name '*.vcxproj' -or -name '*.filters' -or -name 'GNUmake*' | xargs chmod 0644")
