@@ -1,3 +1,8 @@
+Mon Jun 23 14:14:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/make_release.py:
+          Update to use vc11/vc12
+
 Mon Jun 23 12:49:40 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * NEWS:
